added next/prev btn, updated some logic

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <body>
     <h1>Kreyol Flashcards</h1>
     <div id="vocabulary__category-wrapper"></div>
-    <div id="vocabulary__wrapper"></div>
-    <div id="next">next</div>
-    <div id="prev">prev</div>
+    <div id="vocabulary__wrapper">
+      <button id="next">next</button>
+      <button id="prev">prev</button>
+      <button id="exit">exit</button>
+    </div>
+
 
     <script src="/js/app.js" charset="utf-8"></script>
   </body>
