updated logic, css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Kreyol Flashcards</title>
   </head>
   <body>
-    <h1>Kreyol Flashcards</h1>
+    <div class="vocabulary__title">
+      <h1>Kreyol Flashcards</h1>
+      <button id="exit">exit</button>
+    </div>
     <div id="vocabulary__category-wrapper"></div>
     <div id="vocabulary__wrapper">
       <button id="next">next</button>
       <button id="prev">prev</button>
-      <button id="exit">exit</button>
     </div>
 
 
